cppthread (1.1.8.0~bionic) bionic; urgency=high

  * Added a get_boot_id() function (will be available to the logger).
  * Added a plugin implementation (load/unload).
  * Added functions to get/set individual thread system name.
  * Added a re-lock() and is_locked() to the guard object.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 02 Jul 2021 14:59:17 -0700

cppthread (1.1.7.0~bionic) bionic; urgency=high

  * Renamed one NOTUSED() as NOT_USED() (i.e. new naming convension).

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 04 Jun 2021 20:01:15 -0700

cppthread (1.1.6.0~bionic) bionic; urgency=high

  * Include the name in the enter/leave log messages.

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 31 May 2021 23:18:42 -0700

cppthread (1.1.5.0~bionic) bionic; urgency=high

  * Include the deque instead of the queue header.

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 24 May 2021 19:29:08 -0700

cppthread (1.1.4.0~bionic) bionic; urgency=high

  * Added a few missing #include's.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 05 May 2021 10:55:52 -0700

cppthread (1.1.3.0~bionic) bionic; urgency=high

  * Fixed the FIFO to define our own void_t.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 05 May 2021 10:55:52 -0700

cppthread (1.1.2.1~bionic) bionic; urgency=high

  * Bump version to retry build.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 02 May 2021 20:45:07 -0700

cppthread (1.1.2.0~bionic) bionic; urgency=high

  * Added the worker item_with_predicate class.
  * Changed the FIFO in a deque so we can handle the predicate.
  * Added an out of range exception for the pool to raise on invalid size/indices.
  * Fixed a couple of function that used '.' instead of '->'.
  * Fixed up the copyright notice.
  * Ran spellcheck against comments.
  * Fixed the TODO.txt file.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 28 Apr 2021 21:08:00 -0700

cppthread (1.1.1.0~bionic) bionic; urgency=high

  * Applied a couple of fixes for the mutex handling in the logger.
